
What's New in Python 2.7.14?
============================

*Release date: XXXX-XX-XX*

Core and Builtins
-----------------

- Issue #29145: Fix overflow checks in string, bytearray and unicode.
  Patch by jan matejek and Xiang Zhang.

- Issue #28932: Do not include <sys/random.h> if it does not exist.

Extension Modules
-----------------

- Issue #29169: Update zlib to 1.2.10.

Library
-------

- Issue #29006: Revert change from issue #10513 for making sqlite more liable to
  emit "database table is locked" errors.

- Issue #29188: Support glibc 2.24 on Linux: don't use getentropy() function
  but read from /dev/urandom to get random bytes, for example in os.urandom().
  On Linux, getentropy() is implemented which getrandom() is blocking mode,
  whereas os.urandom() should not block.

- Issue #29142: In urllib, suffixes in no_proxy environment variable with
  leading dots could match related hostnames again (e.g. .b.c matches a.b.c).
  Patch by Milan Oberkirch.

- Issue #29094: Offsets in a ZIP file created with extern file object and mode
  "w" now are relative to the start of the file.

- Issue #13051: Fixed recursion errors in large or resized
  curses.textpad.Textbox.  Based on patch by Tycho Andersen.

- Issue #9770: curses.ascii predicates now work correctly with negative
  integers.

- Issue #28427: old keys should not remove new values from
  WeakValueDictionary when collecting from another thread.

- Issue #28998: More APIs now support longs as well as ints.

- Issue 28923: Remove editor artifacts from Tix.py,
  including encoding not recognized by codecs.lookup.

- Issue #29019: Fix dict.fromkeys(x) overallocates when x is sparce dict.
  Original patch by Rasmus Villemoes.

- Issue #19542: Fix bugs in WeakValueDictionary.setdefault() and
  WeakValueDictionary.pop() when a GC collection happens in another
  thread.

- Issue #28925: cPickle now correctly propagates errors when unpickle instances
  of old-style classes.

Build
-----
